concord_macros/tests/dsl/fail/fail_endpoint_missing_response.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client MissingResponseApi { base "https://example.com" }

    GET Broken
        path ["broken"]
}

fn main() {}
