concord_macros/tests/dsl/fail/fail_endpoint_missing_response.stderr
error: endpoint declarations must use `METHOD Name(...) -> Response { ... }` (or `METHOD Name -> Response { ... }`)
 --> tests/dsl/fail/fail_endpoint_missing_response.rs:4:1
  |
4 | / api! {
5 | |     client MissingResponseApi { base https "example.com" }
6 | |
7 | |     GET Broken
8 | |         path ["broken"]
9 | | }
  | |_^
  |
  = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_endpoint_missing_response.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
